fix(ui/dashboard): resolvable tasks, feat: add favicon
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/index.html
+++ b/ui/dashboard/src/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Utask UI</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" href="assets/favicon.png">
   </head>
   <body>
     <app-root>
