feat(ui/dashboard): auto refresh home page / fix(ui/dashboard): new form
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/index.html
+++ b/ui/dashboard/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Utask UI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="assets/favicon.ico" />
   </head>
   <body>
     <app-root>
