feat(UI): update UI

--- a/ui/dashboard/src/utask-module/@components/template-details/template-details.html
+++ b/ui/dashboard/src/utask-module/@components/template-details/template-details.html
@@ -7,7 +7,7 @@
       <utask-editor [value]="text" [config]="config"></utask-editor>
     </div>
     <div class="col-8">
-      <utask-steps-viewer [item]="template" *ngIf="template" done="false"></utask-steps-viewer>
+      <utask-steps-viewer [resolution]="template" *ngIf="template"></utask-steps-viewer>
     </div>
   </div>
 </div>
