--- a/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
@@ -1,127 +1,90 @@
 <utask-loader *ngIf="loaders.tasks"></utask-loader>
 <lib-utask-error-message [data]="errors.tasks" *ngIf="errors.tasks && !loaders.tasks"></lib-utask-error-message>
 
-<div *ngIf="!loaders.tasks && !errors.tasks">
-    <div style="margin-left: 4px;display:inline-block;" class="btn-group" ngbDropdown>
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-sm btn-primary" ngbDropdownToggle *ngIf="bulkActions.enable">
-                Actions (bulk)
-            </button>
-        </div>
-        <div class="dropdown-menu" ngbDropdownMenu>
-            <button type="button" ngbDropdownItem (click)="runAll()" [disabled]="!bulkActions.actions['run']">
+<div class="send-request" *ngIf="!!bulkActions">
+    <button nz-button nz-dropdown [nzDropdownMenu]="menuBulk" [nzPlacement]="'bottomLeft'" nzType="primary"
+        [nzTrigger]="'click'">Bulk
+        actions</button>
+    <nz-dropdown-menu #menuBulk="nzDropdownMenu">
+        <ul nz-menu>
+            <li nz-menu-item (click)="runAll()" [nzDisabled]="!bulkActions.run">
                 Run
-            </button>
-            <button type="button" ngbDropdownItem (click)="cancelAll()" [disabled]="!bulkActions.actions['cancel']">
-                Cancel
-            </button>
-            <button type="button" ngbDropdownItem (click)="pauseAll()" [disabled]="!bulkActions.actions['pause']">
-                Pause
-            </button>
-            <button type="button" ngbDropdownItem (click)="extendAll()" [disabled]="!bulkActions.actions['extend']">
-                Extend
-            </button>
-            <button type="button" ngbDropdownItem (click)="deleteAll()" [disabled]="!bulkActions.actions['delete']">
-                Delete
-            </button>
-        </div>
-    </div>
-    <div *ngIf="display.newTasks" class="alert alert-info">
-        <strong>New tasks</strong> have been added. <button type="button" class="btn btn-info"
-            (click)="displayNewTasks();">Refresh</button>
-    </div>
-
-    <div class="table-striped table-condensed" infiniteScroll (scrolled)="next()">
-        <table class="table utask_tasks-list_table">
-            <thead>
-                <tr>
-                    <th scope="col">
-                        <input type="checkbox" [(ngModel)]="bulkActions.all" title="Select all" *ngIf="bulkActions.all"
-                            (change)="bulkActions.selection = {};checkActions();" />
-                        <input type="checkbox" [(ngModel)]="bulkActions.all" title="Unselect all"
-                            *ngIf="!bulkActions.all" (change)="selectAll();checkActions();" />
-                    </th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Status</th>
-                    <th scope="col" class="d-none d-md-table-cell">Requester</th>
-                    <th scope="col" class="d-none d-lg-table-cell">Resolver</th>
-                    <th scope="col" class="d-none d-xl-table-cell">Last activity</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <ng-template ngFor let-item [ngForOf]="tasks">
-                    <tr *ngIf="!hide[item.id]">
-                        <th style="padding-top: 8px;">
-                            <input type="checkbox" name="selection-{{item.id}}"
-                                [(ngModel)]='bulkActions.selection[item.id]' (change)="checkActions()" />
-                        </th>
-                        <th scope="row">
-                            <p class="task_title"><a [routerLink]='options.routingTask+item.id' title="{{item.title}}" class="nowrap" style="display:block">{{item.title}}</a></p>
-                            <p class="task_id nowrap"><small>{{item.id}}</small></p>
-                        </th>
-                        <td class="utask_state_steps nowrap">
-                            <div class="utask_state_steps-state utask_state_steps-state__{{item.state}}">
-                                {{item.state}}
-                            </div>
-                            <div class="utask_state_steps-steps" *ngIf="item.state !== 'DONE'">
-                                <div class="utask_state_steps-steps-progressbar" [ngStyle]="{
-                          'width': percentages[item.id] + '%'
-                        }">
-                                </div>
-                                <div class="utask_state_steps-steps-text">{{(percentages && percentages[item.id] ? percentages[item.id] : 0)}} %</div>
-                            </div>
-                        </td>
-                        <td class="nowrap d-none d-md-table-cell">
-                            <p class="task_title"
-                                [ngClass]="{'utask_username_me': item.requester_username === meta.username}">
-                                {{item.requester_username}}
-                            </p>
-                            <p class="task_id nowrap"><small>{{item.created | utaskFromNow}}</small></p>
-                        </td>
-                        <td class="nowrap d-none d-lg-table-cell"><span
-                                [ngClass]="{'utask_username_me': item.resolver_username === meta.username}">{{item.resolver_username}}</span>
-                        </td>
-                        <td class="nowrap d-none d-xl-table-cell">{{item.last_activity | utaskFromNow}}</td>
-                        <td class="task_actions">
-                            <div class="btn-group utask_bloc_header_dropdown" ngbDropdown>
-                                <div class="btn-group" role="group">
-                                    <button type="button" class="btn btn-sm btn-primary" title="Run"
-                                        (click)="runResolution(item.resolution, item.id); $event.stopPropagation();"
-                                        [disabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')">
-                                        <i class="fas fa-play"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-sm btn-primary" title="Cancel"
-                                        (click)="cancelResolution(item.resolution, item.id); $event.stopPropagation();"
-                                        [disabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')">
-                                        <i class="fas fa-ban"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-sm btn-primary" ngbDropdownToggle
-                                        [disabled]="(!item.resolution || item.state === 'DONE' || item.state === 'CANCELLED') && (!meta.user_is_admin || item.state === 'BLOCKED')">
-                                        More
-                                    </button>
-                                </div>
-                                <div class="dropdown-menu" ngbDropdownMenu>
-                                    <button type="button" ngbDropdownItem
-                                        [disabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')"
-                                        (click)="pauseResolution(item.resolution, item.id); $event.stopPropagation();">Pause</button>
-                                    <button type="button" ngbDropdownItem
-                                        [disabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')"
-                                        (click)="extendResolution(item.resolution, item.id); $event.stopPropagation();">Extend</button>
-                                    <button type="button" ngbDropdownItem
-                                        (click)="deleteTask(item.id);$event.stopPropagation();"
-                                        [disabled]="item.state === 'BLOCKED' || !meta.user_is_admin">Delete</button>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                </ng-template>
-            </tbody>
-        </table>
-    </div>
-
-    <div style="text-align:center;">
-        <button type="button" class="btn btn-outline-primary btn-secondary" (click)="next(!hasMore)"
-            *ngIf="tasks.length && hasMore" [disabled]="loaders.next">Show more</button>
-    </div>
+            </li>
+            <li nz-menu-item (click)="cancelAll()" [nzDisabled]="!bulkActions.cancel">
+                Cancel</li>
+            <li nz-menu-item (click)="pauseAll()" [nzDisabled]="!bulkActions.pause">Pause</li>
+            <li nz-menu-item (click)="extendAll()" [nzDisabled]="!bulkActions.extend">Extend</li>
+            <li nz-menu-item (click)="deleteAll()" [nzDisabled]="!bulkActions.delete">Delete</li>
+        </ul>
+    </nz-dropdown-menu>
 </div>
+
+<nz-table #virtualTable [nsAutoHeightTable]="39" [nzData]="tasks" [nzVirtualItemSize]="20"
+    [nzVirtualForTrackBy]="trackByIndex" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small">
+    <thead>
+        <tr>
+            <th nzWidth="50px" [nzChecked]="!!bulkAllSelected" (nzCheckedChange)="clickCheckAll($event)">
+            </th>
+            <th>Title</th>
+            <th nzWidth="150px">Status</th>
+            <th nzWidth="150px">Requester</th>
+            <th nzWidth="150px">Resolver</th>
+            <th nzWidth="150px">Last activity</th>
+            <th nzWidth="150px">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <ng-template nz-virtual-scroll let-item let-index="index">
+            <tr>
+                <td [nzChecked]="!!bulkSelection[item.id]" (nzCheckedChange)="clickCheckTask(item.id, $event)">
+                </td>
+                <td>
+                    <a [routerLink]='options.routingTask+item.id' title="{{item.title}}">{{item.title}}</a>
+                    <br />
+                    <small>{{item.id}}</small>
+                </td>
+                <td>
+                    <lib-utask-task-status [task]="item"></lib-utask-task-status>
+                </td>
+                <td>
+                    {{item.requester_username}}
+                    <br />
+                    <small class="subtext">{{item.created | utaskFromNow}}</small>
+                </td>
+                <td>
+                    {{item.resolver_username}}
+                </td>
+                <td>
+                    {{item.last_activity | utaskFromNow}}
+                </td>
+                <td>
+                    <nz-button-group>
+                        <button nz-button nzType="primary" title="Run" (click)="runResolution(item.resolution, item.id)"
+                            [disabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')"><i
+                                nz-icon nzType="caret-right"></i></button>
+                        <button nz-button nzType="primary" title="Cancel"
+                            (click)="cancelResolution(item.resolution, item.id)"
+                            [disabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')"><i
+                                nz-icon nzType="stop"></i></button>
+                        <button nz-button nz-dropdown [nzDropdownMenu]="menu" [nzPlacement]="'bottomRight'"
+                            nzType="primary"
+                            [disabled]="(!item.resolution || item.state === 'DONE' || item.state === 'CANCELLED') && (!meta.user_is_admin || item.state === 'BLOCKED')">More</button>
+                    </nz-button-group>
+                    <nz-dropdown-menu #menu="nzDropdownMenu">
+                        <ul nz-menu>
+                            <li nz-menu-item (click)="pauseResolution(item.resolution, item.id)"
+                                [nzDisabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')">
+                                Pause
+                            </li>
+                            <li nz-menu-item (click)="extendResolution(item.resolution, item.id)"
+                                [nzDisabled]="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')">
+                                Extend</li>
+                            <li nz-menu-item (click)="deleteTask(item.id)"
+                                [nzDisabled]="item.state === 'BLOCKED' || !meta.user_is_admin">Delete</li>
+                        </ul>
+                    </nz-dropdown-menu>
+                </td>
+            </tr>
+        </ng-template>
+    </tbody>
+</nz-table>
