--- a/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.html
@@ -1,9 +1,20 @@
-<span #span>
-	<input type="text" #inputPlaceholder class="placeholder" value="" readonly="" autocomplete="off" spellcheck="false" tabindex="-1"/>
-	<input type="text" #inputMain class="main" [placeholder]="displayPlaceholder ? placeholder : ''"/>
-	<ul class="suggestions" *ngIf="suggestions.length && !suggestionsHide">
-			<li *ngFor="let item of suggestions; let index = index;"  [ngClass]="{'selected': suggestionIndex !== -1 && item.word === suggestions[suggestionIndex].word}" (click)="select(index);">
-					{{item.word}}
-			</li>
-	</ul>
-</span>
+<nz-select #selectComponent nzAllowClear [nzPlaceHolder]="placeholder" [nzDropdownRender]="addTagTemplate"
+	[nzOptionHeightPx]="0" [ngModel]="values" (ngModelChange)="onSelectedTagsChange($event)"
+	(nzOpenChange)="onSelectOpen($event)" nzMode="tags">
+	<nz-option *ngFor="let value of values" [nzValue]="value" [nzLabel]="value"></nz-option>
+</nz-select>
+<ng-template #addTagTemplate>
+	<div class="container">
+		<input placeholder="Select new tag" nz-input [nzAutocomplete]="auto" [ngModel]="currentTag"
+			(ngModelChange)="onChangeTagInput($event)" (keydown)="onKeyDownTagInput($event)" #inputTag />
+		<nz-autocomplete #auto>
+			<nz-auto-option *ngFor="let tag of filteredTags" [nzValue]="tag+'='">
+				{{ tag }}
+			</nz-auto-option>
+		</nz-autocomplete>
+		<nz-button-group>
+			<button nz-button nzType="primary" [disabled]="!inputTagValid" (click)="addItem(currentTag)"><i nz-icon
+					nzType="plus"></i></button>
+		</nz-button-group>
+	</div>
+</ng-template>
