feat(ui): allow to switch to dark theme

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.html
@@ -13,7 +13,7 @@
 			</nz-auto-option>
 		</nz-autocomplete>
 		<nz-button-group>
-			<button nz-button nzType="primary" [disabled]="!inputTagValid" (click)="addItem(currentTag)"><i nz-icon
+			<button nz-button nzType="primary" [disabled]="!inputTagValid" (click)="addItem()"><i nz-icon
 					nzType="plus"></i></button>
 		</nz-button-group>
 	</div>
