refactor(ui): add loader to task list
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
@@ -20,7 +20,8 @@
 </div>
 
 <nz-table #virtualTable [nsAutoHeightTable]="39" [nzData]="tasks" [nzVirtualItemSize]="20"
-    [nzVirtualForTrackBy]="trackByIndex" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small">
+    [nzVirtualForTrackBy]="trackByIndex" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small"
+    [nzLoading]="loaders.tasks && tasks.length === 0">
     <thead>
         <tr>
             <th nzWidth="50px" [nzChecked]="!!bulkAllSelected" (nzCheckedChange)="clickCheckAll($event)">
