ui: modals/editor inprogress

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.html
@@ -2,7 +2,8 @@
 <lib-utask-error-message [data]="error" *ngIf="error"></lib-utask-error-message>
 
 <ng-container *ngIf="!loading && !error">
-    <nz-code-editor class="editor" [ngModel]="text" [nzEditorOption]="{ language: 'yaml', readOnly: true, wordWrap: 'on' }">
-    </nz-code-editor>
+    <lib-utask-editor class="editor" [ngModel]="text" ngDefaultControl [ngModelOptions]="{standalone: true}" [config]="{ language: 'yaml', readOnly: true, wordWrap: 'on' }">
+    </lib-utask-editor>
+
     <lib-utask-steps-viewer [resolution]="template" *ngIf="template"></lib-utask-steps-viewer>
 </ng-container>
