refactor(ui): improve scroll in code editor

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/editor/editor.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/editor/editor.html
@@ -1,1 +1,1 @@
-<nz-code-editor class="editor" [ngModel]="ngModel" [nzEditorOption]="_config" #editor></nz-code-editor>
+<nz-code-editor class="editor" [ngModel]="ngModel" [nzEditorOption]="_config"></nz-code-editor>
