--- a/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.html
@@ -2,8 +2,8 @@
 <lib-utask-error-message [data]="error" *ngIf="error"></lib-utask-error-message>
 
 <ng-container *ngIf="!loading && !error">
-    <lib-utask-editor class="editor" [ngModel]="text" ngDefaultControl [ngModelOptions]="{standalone: true}" [config]="{ language: 'yaml', readOnly: true, wordWrap: 'on' }">
+    <lib-utask-editor class="editor" [ngModel]="text" ngDefaultControl [ngModelOptions]="{standalone: true}"
+        [config]="{ language: 'yaml', readOnly: true, wordWrap: 'on' }">
     </lib-utask-editor>
-
     <lib-utask-steps-viewer [resolution]="template" *ngIf="template"></lib-utask-steps-viewer>
 </ng-container>
