--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/stats/stats.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/stats/stats.html
@@ -18,7 +18,8 @@
                     <td [ngStyle]="{'background':state.color, 'color': 'white', 'width.px': 30}"></td>
                     <td>{{state.label}}</td>
                     <td>{{state.value}}</td>
-                    <td><a [routerLink]="['/tasks']" [queryParams]="{state: state.key, type: 'all', page_size: 20}"><i
+                    <td><a [routerLink]="[uiBaseUrl, 'tasks']"
+                            [queryParams]="{state: state.key, type: 'all', page_size: 20}"><i
                                 class="fas fa-link"></i></a></td>
                 </tr>
             </tbody>
