--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.html
@@ -33,6 +33,7 @@
                 <nz-form-label>Template</nz-form-label>
                 <nz-form-control>
                     <nz-select [ngModel]="pagination.template" (ngModelChange)="paginationTemplateChange($event)">
+                        <nz-option nzValue="" nzLabel="All"></nz-option>
                         <nz-option *ngFor="let t of templates" [nzValue]="t.name" [nzLabel]="t.name"></nz-option>
                     </nz-select>
                 </nz-form-control>
