--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
@@ -100,7 +100,7 @@
         <div app-box-header>
             Execution -
             <small>{{resolution.id}}</small> -
-            <small class="bloc_status resolution_state_{{resolution.state}}">{{resolution.state}}</small>
+            <small class="bloc_status resolution_state_{{resolution.state}}">{{resolution.state}}{{resolution.state === 'ERROR' ? ' (retrying)' : ''}}</small>
             <span *ngIf="loaders.execution || loaders.task">&nbsp;<i nz-icon nzType="loading"></i></span>
             <nz-button-group nzSize="small">
                 <button nz-button nzType="primary" title="Run" (click)="runResolution(resolution)"><i nz-icon
