feat(utask-lib): allow to fully customize task path
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
@@ -44,7 +44,7 @@
                 <td *ngIf="!options?.disableBulk" nzLeft [nzChecked]="!!bulkSelection[item.id]" (nzCheckedChange)="clickCheckTask(item.id, $event)">
                 </td>
                 <td>
-                    <a [routerLink]="options.routingTaskPath+'/task/'+item.id"
+                    <a [routerLink]="options.routingTaskPath+item.id"
                         title="{{item.title}}">{{item.title}}</a>
                     <br />
                     <small>{{item.id}}</small>
